# vellum

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bunfig.toml  flake.nix  package.json
.github/workflows/: publish-packages.yml
docs/: architecture.md
examples/: README.md  counter.js  counter.ts  image_viewer.ts  package.json  styled_counter.js  test_simple.js  test_ui.js  tsconfig.json
examples/js/: counter.js  styled_counter.js  test.js  test_simple.js  test_ui.js
examples/solid/: solid_calculator.tsx  solid_counter.tsx  solid_hover.tsx  solid_image_viewer.tsx  solid_video.tsx
src/: main.rs  socket.rs
src/ipc/: channels.rs  color.rs  commands.rs  events.rs  mod.rs  msgpack.rs  server.rs
src/js_thread/: appjs.js  console_ops.rs  ipc_ops.rs  mod.rs  module_loader.rs  style_parser.rs
src/ui/: creation.rs  driver.rs  handler.rs  layout.rs  mod.rs  style_parser.rs  widget_manager.rs
src/ui/widgets/: button.rs  checkbox.rs  custom.rs  flex.rs  grid.rs  hoverable.rs  hoverable_create.rs  image.rs  label.rs  mod.rs  portal.rs  progress_bar.rs  prose.rs  sized_box.rs  slider.rs  spinner.rs  svg.rs  svg_widget_impl.rs  text_area.rs  text_input.rs  utils.rs  video.rs  video_widget_impl.rs  zstack.rs
src/ui_thread/: creation.rs  driver.rs  handler.rs  layout.rs  mod.rs  styles.rs  svg_widget.rs
src/ui_thread/widgets/: button.rs  checkbox.rs  custom.rs  flex.rs  grid.rs  hoverable.rs  image.rs  label.rs  mod.rs  portal.rs  progress_bar.rs  prose.rs  sized_box.rs  slider.rs  spinner.rs  svg.rs  text_area.rs  text_input.rs  utils.rs  (+1 more)
types/: appjs.d.ts
