[package]
name = "appjs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Deno core — provides V8 JavaScript runtime, module loading, and extension system
deno_core = "0.385.0"
deno_error = "0.7.1"

# TypeScript/JSX transpilation
deno_ast = { version = "0.53.0", features = ["transpiling"] }

# HTTP client for remote module loading (https://, jsr:, npm:)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# Masonry UI framework
masonry = "0.4.0"
masonry_winit = "0.4.0"
winit = "0.30.12"

# Async runtime (required by deno_core internally)
tokio = { version = "1", features = ["full"] }
