[package]
name = "vellum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Masonry UI framework
masonry = "0.4.0"
masonry_winit = "0.4.0"
winit = "0.30.12"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.3"
vello_svg = "0.8"
uds_windows = "1.1.0"
image = "0.25"
